Added start up form for participant data, refined helper functions to function properly, added some css to increase some padding and increase size of go button

--- a/index.css
+++ b/index.css
@@ -21,3 +21,13 @@
 {
     opacity:0 !important;
 }
+
+.row {
+  margin-right: 1%;
+  margin-left: 1%;
+}
+
+#gobutton {
+  height: 150px;
+  width: 300px;
+}
